# FlashLearn

./: .gitignore  pyproject.toml
flashlearn-frontend/: package-lock.json  package.json
flashlearn-frontend/app/: layout.tsx  page.tsx
flashlearn-frontend/app/components/: Navbar.tsx
flashlearn-frontend/app/dashboard/: page.tsx
flashlearn-frontend/app/dashboard/[id]/: page.tsx
flashlearn-frontend/app/login/: page.tsx
flashlearn-frontend/app/signup/: page.tsx
flashlearn-frontend/contexts/: AuthContext.tsx  DataContext.tsx  QueryProvider.tsx
src/: build.sh  db.json  manage.py  requirements.txt  vercel.json
src/core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_document_file.py  0003_alter_course_course_note.py  0004_alter_course_course_note_and_more.py  0005_course_user.py  0006_alter_document_summary.py  0007_document_user_flashcard_user.py  0008_course_slug.py  0009_alter_course_course_note_and_more.py
src/core/templates/core/: course_create.html  course_delete.html  course_detail_view.html  course_update.html  courses.html  document_delete.html  document_detail_view.html  document_form.html  flashcard_form.html  flashcard_generate.html  landing_page_view.html
src/core/templates/registration/: login.html
src/flashlearn/: asgi.py  urls.py  wsgi.py
src/static/: output.css
src/templates/: base.html
src/templates/registration/: login.html  signup.html
