[project]
name = "flashlearn"
version = "0.1.0"
description = ""
authors = [
    {name = "Eldrian",email = "eldrianayera710@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-allauth[socialaccount] (>=65.11.2,<66.0.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "django-cors-headers (>=4.8.0,<5.0.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "openai (>=1.108.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "flashlearn", from = "src"}]


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.19.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
